# happychina-ltc-pool

./: .gitignore  README.md  umbrel-app-store.yml
ltc-merge-pool/: Cargo.toml  Dockerfile  best-shares-api.py  config.toml.template  docker-compose.yml  exports.sh  nginx.conf  umbrel-app.yml
ltc-merge-pool/migrations/: 001_initial.sql  002_payout_addresses.sql
ltc-merge-pool/src/: config.rs  db.rs  main.rs  rpc.rs  types.rs  zmq_sub.rs
ltc-merge-pool/src/api/: admin.rs  blocks.rs  miner.rs  mod.rs  pool.rs  withdraw.rs
ltc-merge-pool/src/crypto/: auxpow.rs  coinbase.rs  encoding.rs  merkle.rs  mod.rs  scrypt.rs  sha256d.rs
ltc-merge-pool/src/jobs/: block_tracker.rs  mod.rs  payments.rs  stats.rs
ltc-merge-pool/src/stratum/: client.rs  job.rs  mod.rs  notifications.rs  protocol.rs  server.rs  vardiff.rs
ltc-merge-pool/web/: admin.html  assets.html  blocks.html  index.html  miner.html
ltc-merge-pool/web/css/: style.css
ltc-merge-pool/web/js/: app.js
