[package]
name = "happychain-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
byteorder = "1"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
thiserror = "2"
parking_lot = "0.12"
dashmap = "6"
scrypt = "0.11"
zeromq = "0.4"
